--- a/exemple_cours_spring_partie01/pom.xml
+++ b/exemple_cours_spring_partie01/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.ensah</groupId>
-	<artifactId>exempleSpring</artifactId>
+	<artifactId>exemple_cours_spring_partie01</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 
@@ -16,11 +16,11 @@
 			<version>5.3.5</version>
 		</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>javax.annotation</groupId> -->
-<!-- 			<artifactId>javax.annotation-api</artifactId> -->
-<!-- 			<version>1.3.2</version> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 
 
 
